Version 1.0.3
-------------
Fixed: Warnings about missing color profiles on some systems.
Changed: invalid graphics are previewed as "BAD IMAGE" instead of crashing.
Changed: updated wxWidgets to 3.0.0.

Version 1.0.2
-------------
Added: an engine configuration file for MBF that includes the beta state actions, and removed the beta actions from the regular MBF configuration.
Added: RandomJump states are now recognized as using the state in parameter1.
Added: thing index numbers in the things editor.
Fixed: -1 state durations could not be entered.
Fixed: crash when trying to display a sprite with an invalid file format.
Changed: Detect additional thing flag delimiters supported by some source ports.

Version 1.0.1
-------------
Added: thing flag mnemonic name to thing flag tool tips.
Changed: multiple thing flags with the same name can now be defined in engine configurations.
Fixed: OpenShotgun and CloseShotgun action names should be OpenShotgun2 and CloseShotgun2.
Fixed: added missing beta things, states and sprites to the MBF engine configuration.
Fixed: added missing translucent flags to the Boom and MBF engine configurations.

Version 1.0.0
-------------
Added: a button to delete the selected IWAD in the patch settings dialog.
Fixed: an ancient bug where the Raise and Lower actions are swapped.
Fixed: state pasting not updating the filtered list.

Version 0.9.1 beta
------------------
Changed: Allow patch load messages to be ignored.
Changed: Make patch reading and writing less exception-prone.
Changed: exit application after an exception has occurred.
Changed: restructure startup into App object, and add exception dialog.
Changed: adjust UI sizes to work better with large fonts.
Fixed: exception dialog not closing application.
Fixed: exceptions not displaying if a busy cursor was set.
Fixed: clean the recent files list before displaying it in the startup dialog.
Fixed: Fix cheat keys being displayed instead of names.