@@ -1753,7 +1753,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -1762,7 +1762,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -1825,7 +1825,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -1834,7 +1834,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -1897,7 +1897,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -1906,7 +1906,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2023,7 +2023,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2032,7 +2032,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2176,7 +2176,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2185,7 +2185,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2248,7 +2248,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2257,7 +2257,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2347,7 +2347,7 @@
             "spriteFrame": 3
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2356,7 +2356,7 @@
             "spriteFrame": 2
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2401,7 +2401,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2410,7 +2410,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2464,7 +2464,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2473,7 +2473,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
