@@ -1828,7 +1828,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -1837,7 +1837,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -1900,7 +1900,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -1909,7 +1909,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -1972,7 +1972,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -1981,7 +1981,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2098,7 +2098,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2107,7 +2107,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2251,7 +2251,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2260,7 +2260,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2323,7 +2323,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2332,7 +2332,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2422,7 +2422,7 @@
             "spriteFrame": 3
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2431,7 +2431,7 @@
             "spriteFrame": 2
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2476,7 +2476,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2485,7 +2485,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2539,7 +2539,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Raise", 
+            "action": "Lower", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
@@ -2548,7 +2548,7 @@
             "spriteFrame": 0
         }, 
         {
-            "action": "Lower", 
+            "action": "Raise", 
             "duration": 1, 
             "parameter1": 0, 
             "parameter2": 0, 
